--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons.min.css';
+
+html, body, app-root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #73777a;
+}
+nav.navbar + div {
+  margin-top: 0 !important;
+}
+body {
+  background-color: #73777a;
+  margin: 0;
+  padding: 0;
+}
+
+.carousel {
+  margin-top: 0 !important;
+}
