actualizacion-productos.component.html

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -11,7 +11,7 @@
       [producto]="producto"
       [index]="i"
       (editar)="abrirEdicionPorId($event)"
-      (eliminar)="eliminarProducto(producto._id)">
+      (eliminar)="producto._id && eliminarProducto(producto._id)">
     </app-product-card-crud>
   </div>
 </div>
